# video-analytics-server

./: .gitignore  Cargo.toml  README.md  extract_box.py  get_person.py  tailwind.config.js
src/: cron_job.rs  extract_box.py  main.rs  models.rs
src/cron_job/: deletion_job.rs  mod.rs  yolo.rs
templates/: hour.html  index.html
