[package]
name = "video-analytics-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
askama = { version = "0.12.1", features = ["serde-json"] }
actix-files = "0.6.6"
libc = "0.2"
tokio = { version = "1", features = ["time"] }
chrono = "0.4"
walkdir = "2.3.2"

[dependencies.pyo3]
version = "0.22"
features = ["auto-initialize"]

[build-dependencies]
cc = "1.0"
