[package]
name = "video-analytics-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
askama = { version = "0.12.1", features = ["serde-json"] }
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
chrono = "0.4"
walkdir = "2.3.2"
notify = "5.0"
ngrok = { version = "0.13.1", features = ["axum"] }

[dependencies.pyo3]
version = "0.22"
features = ["auto-initialize"]

[build-dependencies]
cc = "1.0"
